--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=123456789
 DATABASE=test
 DATABASE_ROOT_PASSWORD=root
 JWT_SECRET_KEY=123456
+
+AWS_REGION=ap-northeast-1
+AWS_ACCESS_KEY_ID=AKIA5G4D5EB4UCFP7MJV
+AWS_SECRET_ACCESS_KEY=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
+AWS_PUBLIC_BUCKET_NAME=learn-nestjs
