--- a/.env
+++ b/.env
@@ -11,3 +11,11 @@ AWS_REGION=ap-northeast-1
 AWS_ACCESS_KEY_ID=AKIA5G4D5EB4UCFP7MJV
 AWS_SECRET_ACCESS_KEY=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
 AWS_PUBLIC_BUCKET_NAME=learn-nestjs
+
+#Mail
+
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=copham250@gmail.com
+MAIL_PASSWORD=yaiulyutxqgvjwgw
+MAIL_FROM=${MAIL_USER}
+MAIL_TRANSPORT=smtps://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
