--- a/.env
+++ b/.env
@@ -3,8 +3,9 @@ DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USER=user
 DATABASE_PASSWORD=123456789
-DATABASE=test
+DATABASE_NAME=test
 DATABASE_ROOT_PASSWORD=root
+
 JWT_SECRET_KEY=123456
 
 AWS_REGION=ap-northeast-1
@@ -17,5 +18,5 @@ AWS_PUBLIC_BUCKET_NAME=learn-nestjs
 MAIL_HOST=smtp.gmail.com
 MAIL_USER=copham250@gmail.com
 MAIL_PASSWORD=pqeslefggakqllkq
-MAIL_FROM=${MAIL_USER}
+MAIL_FROM=
 MAIL_TRANSPORT=smtps://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
