--- a/.env
+++ b/.env
@@ -20,3 +20,9 @@ MAIL_USER=copham250@gmail.com
 MAIL_PASSWORD=pqeslefggakqllkq
 MAIL_FROM=
 MAIL_TRANSPORT=smtps://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
+
+# redis
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=123456789
