--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1310.0",
     "bcrypt": "^5.1.0",
+    "cache-manager": "v4.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -55,6 +57,8 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^4.0.2",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
