--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
     "@nestjs-modules/mailer": "^1.8.1",
+    "@nestjs/bull": "^0.6.3",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.0",
     "@nestjs/core": "^9.0.0",
@@ -35,6 +36,7 @@
     "@types/aws-sdk": "^2.7.0",
     "aws-sdk": "^2.1310.0",
     "bcrypt": "^5.1.0",
+    "bull": "^4.10.4",
     "cache-manager": "v4.1",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
@@ -57,6 +59,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
